[tool.poetry]
name = "poetry-svp"
version = "0.1.0"
description = "Poetry SVP"
authors = ["Jay Johnson <jjohns2@sandia.gov>"]
license = "MIT"
readme = "README.md"
packages = [{include = "poetry_svp"}]

[tool.poetry.dependencies]
python = ">3.8.* <3.10.0"
numpy = "^1.24.1"
pandas = "^1.5.2"
cycler = "^0.11.0"
et-xmlfile = "^1.1.0"
future = "^0.18.2"
iso8601 = "^1.1.0"
jdcal = "^1.4.1"
kiwisolver = "^1.4.4"
matplotlib = "^3.6.2"
openpyxl = "^3.0.10"
pillow = "^9.3.0"
prettytable = "^3.5.0"
pydaqmx = "^1.4.6"
pymodbus = "^3.0.2"
pyparsing = "^3.0.9"
pysunspec = "^2.1.1"
pysunspec2 = "^1.0.8"
python-dateutil = "^2.8.2"
pytz = "^2022.7"
pyvisa = "^1.13.0"
pyyaml = "^6.0"
serial = "^0.0.97"
six = "^1.16.0"
wxmplot = "^0.9.53"
wxpython = "^4.2.0"
xlsxwriter = "^3.0.4"
natsort = "^8.2.0"
urllib3 = "^1.26.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
