[tool.poetry]
name = "poetry-svp"
version = "0.1.0"
description = ""
authors = ["Jay Johnson <jjohns2@sandia.gov>"]
readme = "README.md"
packages = [{include = "poetry_svp"}]

[tool.poetry.dependencies]
python = ">=3.7.* <3.9.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
